--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>First Responsive Website</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  </head>
-  <body>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>First Responsive Website</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+</head>
+<style>
+  :root {
+    --dark-blue: #264653;
+    --light-green: #2a9d8f;
+    --yellow: #e9c46a;
+    --orange: #f4a261;
+    --salmon: #e76f51;
+  }
+
+  .container {
+    color: var(--dark-blue);
+    font-size: 20px;
+    font-weight: bold;
+    min-height: 100vh;
+    background-color: var(--white);
+  }
+
+  .row {
+    border: 1px solid var(--dark-blue);
+    min-height: 50px;
+  }
+
+  [class^="col"] {
+    border: 1px solid var(--light-green);
+    min-height: 50px;
+  }
+</style>
+
+<body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6">
+        <img src="img/Lebron.jpg" alt="Lebron James" class="img-fluid">
+      </div>
+      <div class="col-lg-6">
+        <h1>LeBron James</h1>
+        <p>LeBron Raymone James Sr. (born December 30, 1984) is an American professional basketball player for the Los
+          Angeles Lakers of the National Basketball Association (NBA). He is widely regarded as one of the greatest
+          basketball players in NBA history and has won four NBA championships, four NBA Most Valuable Player (MVP)
+          Awards, and two Olympic gold medals.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col"></div>
+    </div>
+  </div>
+</body>
+
 </html>
