--- a/index.html
+++ b/index.html
@@ -54,9 +54,53 @@
       </div>
     </div>
     <div class="row">
-      <div class="col"></div>
+      <div class="col-lg-4">
+        <img src="img/bronny.jpg">
+      </div>
+      <div class="col-lg-4">
+        <img src="img/waifu.jpg">
+      </div>
+      <div class="col-lg-4">
+        <img src="img/Brycey.jpg">
+      </div>
     </div>
+    <div class="row">
+      <div class="col-lg-4">
+        <p>Lebron's teamate and eldest son</p>
+      </div>
+      <div class="col-lg-4">
+        <p>Lebron's partner in marriage</p>
+      </div>
+      <div class="col-lg-4">
+        <p>Lebron's other son and future last overall NBA pick</p>
+      </div>
   </div>
+      <div class="row">
+        <div class="col-lg-6">
+          <img src="img/HereGoesKyrie.jpg">
+        </div>
+        <div class="col-lg-6">
+          <img src="img/AD.jpg">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3">
+          <p>This is one of LeBron’s best teammates, Kyrie Irving.</p>
+        </div>
+        <div class="col-lg-3">
+          <p>They played on the Cavs together, making 3 consecutive finals,s going 1-2.
+          </p>
+        </div>
+        <div class="col-lg-3">
+          <p>Another example of Le Bon Bon’s great teammates is Anthony Davis.</p>
+        </div>
+        <div class="col-lg-3">
+          <p>They played together for 6 years, even winning a championship in 2020.
+          </p>
+        </div>
+      </div>
+    </div>
+
 </body>
 
 </html>
