commit and push

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     crossorigin="anonymous"></script>
   <div class="container">
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-md-6 col-sm-12">
         <img src="img/Lebron.jpg" alt="Lebron James" class="img-fluid">
       </div>
-      <div class="col-lg-6">
+      <div class="col-md-6 col-sm-12">
         <h1>LeBron James</h1>
         <p>LeBron Raymone James Sr. (born December 30, 1984) is an American professional basketball player for the Los
           Angeles Lakers of the National Basketball Association (NBA). He is widely regarded as one of the greatest
@@ -54,52 +54,44 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-md-6 col-sm-12">
         <img src="img/bronny.jpg">
+        <p>Lebron's teamate and eldest son</p>
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-md-6 col-sm-12">
         <img src="img/waifu.jpg">
+        <p>Lebron's partner in marriage</p>
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-sm-12">
         <img src="img/Brycey.jpg">
+        <p>Lebron's other son and future last overall NBA pick</p>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4">
-        <p>Lebron's teamate and eldest son</p>
+      <div class="col-md-6 col-sm-12">
+        <img src="img/HereGoesKyrie.jpg">
       </div>
-      <div class="col-lg-4">
-        <p>Lebron's partner in marriage</p>
+      <div class="col-md-3 col-sm-6">
+        <p>This is one of LeBron’s best teammates, Kyrie Irving.</p>
       </div>
-      <div class="col-lg-4">
-        <p>Lebron's other son and future last overall NBA pick</p>
-      </div>
-  </div>
-      <div class="row">
-        <div class="col-lg-6">
-          <img src="img/HereGoesKyrie.jpg">
-        </div>
-        <div class="col-lg-6">
-          <img src="img/AD.jpg">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-3">
-          <p>This is one of LeBron’s best teammates, Kyrie Irving.</p>
-        </div>
-        <div class="col-lg-3">
-          <p>They played on the Cavs together, making 3 consecutive finals,s going 1-2.
-          </p>
-        </div>
-        <div class="col-lg-3">
-          <p>Another example of Le Bon Bon’s great teammates is Anthony Davis.</p>
-        </div>
-        <div class="col-lg-3">
-          <p>They played together for 6 years, even winning a championship in 2020.
-          </p>
-        </div>
+      <div class="col-md-3 col-sm-6">
+        <p>They played on the Cavs together, making 3 consecutive finals,s going 1-2.
+        </p>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-6 col-sm-12">
+        <img src="img/AD.jpg">
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <p>Another example of Le Bon Bon’s great teammates is Anthony Davis.</p>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <p>They played together for 6 years, even winning a championship in 2020.
+        </p>
+      </div>
+    </div>
+  </div>
 
 </body>
 
