--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <p>This is one of LeBron’s best teammates, Kyrie Irving.</p>
       </div>
       <div class="col-md-3 col-sm-6">
-        <p>They played on the Cavs together, making 3 consecutive finals,s going 1-2.
+        <p>They played on the Cavs together, making 3 consecutive finals going 1-2.
         </p>
       </div>
     </div>
